--- a/src/App.css
+++ b/src/App.css
@@ -5,20 +5,320 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&family=Ramaraja&display=swap');
 
+/* global css  */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Ramaraja', serif; */
+}
+
 .container {
   max-width: 1440px !important;
   margin: auto;
   padding: 0px !important;
 }
+
+.MainHeading {
+  color: var(--Black, #242424);
+  font-family: 'Ramaraja', serif;
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.secondaryHeading {
+  color: var(--Orange, #DB4C38);
+  text-align: center;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.mainSectionHeadings {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin-bottom: 50px;
+}
+
+.mainSectionHeadings :is(.MainHeading, .secondaryHeading) {
+  margin: 0px;
+}
+
+/* ____________________________ */
+
 #navbarSupportedContent .navbar-nav .nav-link {
-  color: var(--black, #242424);
-  font-family: Poppins;
+  color: #242424;
   font-size: 16px;
   font-style: normal;
   font-weight: 600;
   line-height: 26.6px;
   letter-spacing: 1px;
 }
+
 #navbarSupportedContent .navbar-nav .nav-link.active {
   color: var(--primaryBtnBgColor);
+}
+
+/* banner section css  */
+#carouselExampleCaptions :is(button.carousel-control-prev, button.carousel-control-next) {
+  position: absolute;
+  width: 60px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  background: #D9D9D9;
+  left: calc(100% - 100px);
+  top: calc(100% - 80px);
+  z-index: 99;
+}
+
+#carouselExampleCaptions :is(button.carousel-control-prev) {
+  left: calc(100% - 180px);
+}
+
+#carouselExampleCaptions :is(button.carousel-control-prev, button.carousel-control-next):hover {
+  background: #DB4C38;
+}
+
+#carouselExampleCaptions button span {
+  display: none;
+}
+
+#carouselExampleCaptions button::before {
+  width: 32px;
+  height: 32px;
+  content: "";
+  position: absolute;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+#carouselExampleCaptions .carousel-control-prev::before {
+  background-image: url("./images/Arrow_Right_MD-1.png");
+}
+
+#carouselExampleCaptions .carousel-control-next::before {
+  background-image: url("./images/lf_black.png");
+}
+
+#carouselExampleCaptions .carousel-control-prev:hover::before {
+  background-image: url("./images/rg_white.png");
+}
+
+#carouselExampleCaptions .carousel-control-next:hover::before {
+  background-image: url("./images/Arrow_Left_MD-1.png");
+}
+
+#carouselExampleCaptions .carousel-indicators {
+  max-width: 150px;
+  margin: 0;
+  transform: rotateZ(90deg);
+  top: 50%;
+  height: max-content;
+  right: 40px;
+  left: auto;
+}
+
+#carouselExampleCaptions .carousel-indicators button {
+  background: #fff;
+  border: none;
+  opacity: 1;
+}
+
+#carouselExampleCaptions .carousel-indicators button.active {
+  background: #DB4C38;
+}
+
+#carouselExampleCaptions .carousel-caption {
+  top: 20%;
+}
+
+#carouselExampleCaptions .carousel-caption h5 {
+  color: var(--White, #FFF);
+  text-align: center;
+  font-family: Ramaraja;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  max-width: 735px;
+  margin: auto;
+}
+
+#carouselExampleCaptions .carousel-caption p {
+  color: rgba(255, 255, 255, 0.90);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  letter-spacing: 1.5px;
+}
+
+.bannerBottom {
+  max-width: 760px;
+  margin: auto;
+  margin-top: -100px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: #fff;
+}
+
+/* featuredMainSection css  */
+
+.carouselItems {
+  box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.414);
+  background-color: #fff;
+}
+
+.featuredMainSection {
+  background-image: url("./images/bgimg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 80px 0 80px 0;
+}
+
+.featuredMainSection .owl-stage {
+  padding: 10px 0;
+}
+
+.carouselItems .sliderImage {
+  height: 330px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.textSection {
+  padding: 25px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.textSection :is(h2, p, button) {
+  margin: 0px;
+}
+
+.textSection h2 {
+  color: var(--Black, #242424);
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 46.033px;
+  text-transform: uppercase;
+}
+
+.textSection p {
+  color: var(--grey, #909090);
+  font-family: Poppins;
+  font-size: 20.19px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30.285px;
+}
+
+.textSection button {
+  max-width: 180px;
+  padding: 0px;
+  text-align: left;
+  align-items: center;
+}
+
+.textSection button p {
+  color: #DB4C38;
+  font-family: 'Ramaraja', serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 2.019px;
+  text-transform: uppercase;
+  padding-top: 6px;
+  padding-right: 4px;
+  transition: padding-right .3s linear;
+}
+
+.textSection button:hover p {
+  padding-right: 10px;
+}
+
+.textSection button .orangeArrow {
+  max-width: 20px;
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav {
+  max-width: max-content;
+  margin: auto;
+  display: flex;
+  gap: 16px;
+  padding-top: 20px;
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav button>span {
+  display: none;
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav :is(button.owl-prev, button.owl-next) {
+  position: relative;
+  width: 60px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2px;
+  background: #D9D9D9;
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav :is(button.owl-prev, button.owl-next):hover {
+  background: #DB4C38;
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav button::before {
+  width: 32px;
+  height: 32px;
+  content: "";
+  position: absolute;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav button.owl-prev::before {
+  background-image: url("./images/Arrow_Right_MD-1.png");
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav button.owl-next::before {
+  background-image: url("./images/lf_black.png");
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav button.owl-prev:hover::before {
+  background-image: url("./images/rg_white.png");
+}
+
+.FeaturedClassesSliderSection .owl-carousel .owl-nav button.owl-next:hover::before {
+  background-image: url("./images/Arrow_Left_MD-1.png");
+}
+
+
+
+/* about section css here  */
+.aboutUsSection .mainSectionHeadings {
+	margin-bottom: 29px;
+}
+.aboutUsSection :is(.secondaryHeading , .MainHeading){
+  text-align: left;
 }
